Some changes using bootstrap/buttons

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Hola !!</h1>
-<p>Registrate <%= link_to "aquí", "#" %>.</p>
+
+<div class="jumbotron">
+	<h1>Hola !!</h1>
+	<p> <%= link_to "Regístrate", "#", class: "btn btn-danger btn-lg" %></p>
+</div>
