Some changes using bootstrap_Withoutmyowncustomization

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,6 @@
+$body-bg: #c0392b;
+$navbar-inverse-bg: #e74c3c;
+$navbar-inverse-link-color: white;
+$brand-primary: #34495e;
+
 @import 'bootstrap';
