--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About us</h1>
-<p>Pinteresting app... </p>
+<div class="jumbotron">
+	<h1>About us</h1>
+	<p>Pinteresting app... Work in progress, don't really know what to do.</p>
+</div>
