--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Contact us", contact_path %></li>
+        <li><%= link_to "Registro", registro_path %></li>
         
       </ul>
     </div><!-- /.navbar-collapse -->
