--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
 <div class="jumbotron">
 	<h1>Hola !!</h1>
-	<p> <%= link_to "Regístrate", "#", class: "btn btn-danger btn-lg" %></p>
+	<p> <%= link_to "Regístrate", "registro", class: "btn btn-danger btn-lg active" %></p>
 </div>
