Some changes using bootstrap_Variables

--- a/app/views/pages/registro.html.erb
+++ b/app/views/pages/registro.html.erb
@@ -9,6 +9,6 @@
 	   	<label for="Password">Password</label>
 	   	<input type="password" class="form-control" id="password" placeholder="Password">
 	   </div>
-		<p><%= link_to "¡Soy yo!", "#", class: "btn btn-danger active" %></p>
+		<p><%= link_to "¡Soy yo!", "#", class: "btn btn-danger" %></p>
 	</form>
 </div>
