--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,11 @@
-$body-bg: #c0392b;
-$navbar-inverse-bg: #e74c3c;
-$navbar-inverse-link-color: white;
-$brand-primary: #34495e;
-$input-color: #e74c3c; 
+$body-bg:								#c0392b;
+$navbar-inverse-bg:					#e74c3c;
+$navbar-inverse-link-color:		white;
+$brand-primary:						#34495e;
+$input-color:							#e74c3c; 
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
