--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-
-<div class="jumbotron">
+<div class="jumbotron center">
 	<h1>Hola !!</h1>
-	<p> <%= link_to "Regístrate", "registro", class: "btn btn-danger btn-lg active" %></p>
+	<p> <%= link_to "Regístrate", "registro", class: "btn btn-danger btn-lg" %></p>
 </div>
