--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 <!--	<%= link_to "Home", root_path %>
 	<%= link_to "About", about_path %> -->
 	<div class="container">
+		<% flash.each do |name, msg| %>
+			<% content_tag(:div, msg, class: "alert alert-#{name}") %>
+		<% end %>
 		<%= yield %>
 	</div>
 
