--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,11 @@
 <div class="jumbotron center">
 	<h1>Hola !!</h1>
-	<p> <%= link_to "Regístrate", "registro", class: "btn btn-danger btn-lg" %></p>
+	<% if user_signed_in? %>
+		# do something
+	<% else %>
+		<p>
+			<%= link_to "Ingresar", new_user_session_path, class: "btn btn-default btn-lg" %>
+			<%= link_to "Regístrate", new_user_registration_path, class: "btn btn-danger btn-lg" %>
+		</p>
+	<% end %>
 </div>
