--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 	<%= link_to "About", about_path %> -->
 	<div class="container">
 		<% flash.each do |name, msg| %>
-			<% content_tag(:div, msg, class: "alert alert-#{name}") %>
+			<% content_tag(:div, msg, class: "alert alert-info") %>
 		<% end %>
 		<%= yield %>
 	</div>
