--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,7 +3,9 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Description</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -11,17 +13,22 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <td><%= image_tag pin.image.url(:medium) %></td>
         <td><%= pin.description %></td>
+        <td><%= pin.user.email if pin.user %></td>
       </tr>
       <tr>
-        <td><%= link_to 'Show ', pin %> |
-        <%= link_to 'Edit ', edit_pin_path(pin) %> |
-        <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show ', pin %>
+        <% if pin.user == current_user %>|
+          <%= link_to 'Edit ', edit_pin_path(pin) %> |
+          <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Pin', new_pin_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New Pin', new_pin_path %>
+<% end %>
